Issue #SB-25251 pills color change in dark mode

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -1446,3 +1446,6 @@ sunbird-epub-player .sunbird-epub-container {
 .contentViewerIframeShadow.player-fullscreen.content-full-video sunbird-epub-player .sb-player-splash-container{
   height: 100% !important;
 }
+.sb-label-grid.sb-pills-grid .item{
+  color: var(--black);
+}
